--- a/na_visualize/assets/style.css
+++ b/na_visualize/assets/style.css
@@ -1,6 +1,12 @@
 body {
   font-family: sans-serif;
 }
-h1, h2, h3, h4, h5, h6 {
-  color: purple
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: darkred
 }
