--- a/na_visualize/assets/style.css
+++ b/na_visualize/assets/style.css
@@ -10,3 +10,16 @@ h5,
 h6 {
   color: darkred
 }
+
+button {
+  background-color: darkred;
+  color: white;
+  border: none;
+}
+
+.badge {
+  color: white;
+  padding: 10px;
+  margin: 5px;
+  text-align: center;
+}
