--- a/na_visualize/static/style.css
+++ b/na_visualize/static/style.css
@@ -55,6 +55,7 @@ select {
 
 #chart {
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 #form {
@@ -83,5 +84,4 @@ footer {
   left: 0;
   width: 100%;
   text-align: center;
-  margin-top: 20px;
 }
