adapt margin to layout

--- a/na_visualize/templates/dash.html
+++ b/na_visualize/templates/dash.html
@@ -72,7 +72,7 @@
           }
         });
       };
-      var layout = { barmode: "stack", height: 600, autosize: true };
+      var layout = { barmode: "stack", height: 600, margin: {l:20, r:20, b:20, t:20 }};
       Plotly.newPlot("chart", bar, layout, { staticPlot: true, responsive: true });
     }
 
