--- a/na_visualize/templates/dash.html
+++ b/na_visualize/templates/dash.html
@@ -66,13 +66,22 @@
           name: order[key] + " (" + total_amount[key] + ")",
           type: "bar",
           text: amounts[order[key]].map(String),
-          textposition: 'auto',
+          textposition: "auto",
           marker: {
             color: colors[order[key]]
-          }
+          },
         });
       };
-      var layout = { barmode: "stack", height: 600, margin: {l:20, r:20, b:100, t:20 }};
+      var layout = {
+        barmode: "stack",
+        height: 600,
+        margin: { l: 20, r: 20, b: 100, t: 20 },
+        legend: {
+          x: 1,
+          xanchor: "right",
+          y: 1
+        },
+      };
       Plotly.newPlot("chart", bar, layout, { staticPlot: true, responsive: true });
     }
 
