--- a/na_visualize/templates/dash.html
+++ b/na_visualize/templates/dash.html
@@ -38,6 +38,8 @@
         </label>
 
         <button id="submit-button" type="button">OK</button>
+        <input id="check-live" type="checkbox" />
+        <label for="check-live">Live</label>
       </form>
     </div>
   </header>
