--- a/na_visualize/templates/dash.html
+++ b/na_visualize/templates/dash.html
@@ -1,71 +1,32 @@
-<!doctype html>
+{% extends "base.html" %}
+{% block content %}
+  <div>
+    <form id="form" autocomplete="off" action="">
+      <label id="start-date-label">Début
+        <input id="start-date" class="date-input" type="date" name="start-date" value="{{ start_date }}"
+          min="{{ start_date }}" max="{{ end_date }}" />
+      </label>
 
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Primary Meta Tags -->
-  <title>NA-Radar</title>
-  <meta name="title" content="NA-Radar">
-  <meta name="description" content="Suivi des mouvements d'avions sur l'aéroport de Nantes-Atlantique. ">
+      <label id="end-date-label">Fin
+        <input id="end-date" class="date-input" type="date" name="end-date" value="{{ end_date }}"
+          min="{{ start_date }}" max="{{ end_date }}" />
+      </label>
 
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://na-radar.matteli.fr/">
-  <meta property="og:title" content="NA-Radar">
-  <meta property="og:description" content="Suivi des mouvements d'avions sur l'aéroport de Nantes-Atlantique. ">
-  <meta property="og:image" content="https://na-radar.matteli.fr/media/preview.png">
-
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://na-radar.matteli.fr/">
-  <meta property="twitter:title" content="NA-Radar">
-  <meta property="twitter:description" content="Suivi des mouvements d'avions sur l'aéroport de Nantes-Atlantique. ">
-  <meta property="twitter:image" content="https://na-radar.matteli.fr/media/preview.png">
-
-  <link rel="stylesheet" href='/static/style.css' />
-  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" />
-</head>
-
-<body>
-  <header>
-    <h1>
-      NA-Radar
-    </h1>
-    <h3>
-      Suivi des mouvements d'avions sur l'aéroport de Nantes-Atlantique.
-    </h3>
-    <br />
-    <div>
-      <form id="form" autocomplete="off" action="">
-        <label id="start-date-label">Début
-          <input id="start-date" class="date-input" type="date" name="start-date" value="{{ start_date }}"
-            min="{{ start_date }}" max="{{ end_date }}" />
-        </label>
-
-        <label id="end-date-label">Fin
-          <input id="end-date" class="date-input" type="date" name="end-date" value="{{ end_date }}"
-            min="{{ start_date }}" max="{{ end_date }}" />
-        </label>
-
-        <label id="graphic-label">Graphique
-          <select id="graphic-select" name="type-graph">
-            <option value="H" selected>Horaires</option>
-            <option value="Z">Zones</option>
-            <option value="MH">Mouvements et horaires</option>
-            <option value="ZH">Zones et horaires</option>
-          </select>
-        </label>
-        <button id="submit-button" class="button-enabled" type="button">OK</button>
-        <button id="live-button" class="button-released" type="button">LIVE</button>
-      </form>
-    </div>
-  </header>
-  <main>
-    <div id="chart" class="chart"></div>
-  </main>
-  <footer>
-    Ces graphiques ne sont donnés qu'à titre informatif | <a href="https://github.com/matteli/na-radar">Code source sur
-      GitHub</a> | <a href="https://github.com/sponsors/matteli">Sponsor &#9825;</a>
-  </footer>
+      <label id="graphic-label">Graphique
+        <select id="graphic-select" name="type-graph">
+          <option value="H" selected>Horaires</option>
+          <option value="Z">Zones</option>
+          <option value="MH">Mouvements et horaires</option>
+          <option value="ZH">Zones et horaires</option>
+        </select>
+      </label>
+      <button id="submit-button" class="button-enabled" type="button">OK</button>
+      <button id="live-button" class="button-released" type="button">LIVE</button>
+    </form>
+  </div>
+  <div id="chart" class="chart"></div>
+{% endblock %}
+{% block script %}
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script type="text/javascript">
     var airlines = {{ airlines | safe }};
@@ -149,4 +110,4 @@
         });
     }
   </script>
-</body>
+{% endblock %}
