--- a/na_visualize/templates/base.html
+++ b/na_visualize/templates/base.html
@@ -27,12 +27,8 @@
 
 <body>
   <h1>
-    NA-Radar
+    <a id="title" href="/">NA-Radar</a>
   </h1>
-  <h3>
-    Suivi des mouvements d'avions sur l'aéroport de Nantes-Atlantique.
-  </h3>
-  <br />
   {% block content %}{% endblock %}
   <footer>
     Ces graphiques ne sont donnés qu'à titre informatif | <a href="https://github.com/matteli/na-radar">Code source sur
