--- a/na_visualize/templates/dash.html
+++ b/na_visualize/templates/dash.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
+  <h3>
+    Suivi des mouvements d'avions sur l'aéroport de Nantes-Atlantique.
+    <a id="help-button" href="/help">&nbsp;?&nbsp;</a>
+  </h3>
   <div>
     <form id="form" autocomplete="off" action="">
       <label id="start-date-label">Début
@@ -46,6 +50,7 @@
         document.getElementById("submit-button").disabled = true;
         document.getElementById("start-date").disabled = true;
         document.getElementById("end-date").disabled = true;
+        document.getElementById("end-date").value = "";
         document.getElementById("graphic-select").disabled = true;
         document.getElementById("live-button").classList.add ("button-enabled");
         document.getElementById("live-button").classList.remove ("button-released");
