--- a/na_visualize/templates/help.html
+++ b/na_visualize/templates/help.html
@@ -1,21 +1,21 @@
 {% extends "base.html" %}
 {% block content %}
-<p>Les différents graphiques présentent les conditions de mouvements d'avions pour les dix compagnies les plus représentées :
+<p>Les différents graphiques présentent les conditions de mouvements (décollage, atterrissage) d'avions sur l'aéroport de Nantes-Atlantique pour les dix compagnies les plus représentées :
   <ul>
     <li>
-      Le graphique "Couvre-feu" indiquent le nombre d'avions par compagnie utilisant l'aéroport pendant le couvre-feu (de 0h à 6h).
+      Le graphique "Couvre-feu" indiquent le nombre de mouvements d'avions par compagnie pendant le couvre-feu (de 0h à 6h).
     </li>
     <li>
-      Le graphique "Horaires" indiquent le nombre d'avions par compagnie utilisant l'aéroport pendant le couvre-feu (de 0h à 6h) ou le reste de la journée.
+      Le graphique "Horaires" indiquent le nombre de mouvements d'avions par compagnie pendant le couvre-feu (de 0h à 6h) ou le reste de la journée.
     </li>
     <li>
-      Le graphique "Zones" indiquent le nombre d'avions par compagnie utilisant l'aéroport par le sud ou par le nord.
+      Le graphique "Zones" indiquent le nombre de mouvements d'avions par compagnie par le sud ou par le nord.
     </li>
     <li>
       Le graphique "Mouvements et horaires" indiquent le nombre d'avions par compagnie décollant ou atterrissant pendant le couvre-feu (de 0h à 6h) ou le reste de la journée.
     </li>
     <li>
-      Le graphique "Zones et horaires" indiquent le nombre d'avions par compagnie utilisant l'aéroport par le sud ou par le nord pendant le couvre-feu (de 0h à 6h) ou le reste de la journée.
+      Le graphique "Zones et horaires" indiquent le nombre de mouvements d'avions par compagnie utilisant l'aéroport par le sud ou par le nord pendant le couvre-feu (de 0h à 6h) ou le reste de la journée.
     </li>
     <li>
       Le graphique "Zones et mouvements" indiquent le nombre d'avions par compagnie décollant ou atterrissant par le sud ou par le nord.
@@ -23,7 +23,7 @@
   </ul>
 </p>
 <p>
-  Il est possible de filtrer par dates en indiquant le début et la fin de la prise en compte des vols.
+  Il est possible de filtrer par dates en indiquant le début et la fin (jours compris) de la prise en compte des vols.
 </p>
 <p>
   Tout changement de date et/ou de type de graphique doit être validé par le boutton OK.
