--- a/na_visualize/templates/base.html
+++ b/na_visualize/templates/base.html
@@ -31,7 +31,7 @@
   </h1>
   {% block content %}{% endblock %}
   <footer>
-    NA-Radar | Ces graphiques ne sont donnés qu'à titre informatif | <a href="https://github.com/matteli/na-radar">Code source sur GitHub</a> | <a href="https://github.com/sponsors/matteli">Sponsor &#9825;</a>
+    NA-Radar | Ces graphiques ne sont donnés qu'à titre informatif | <a href="https://github.com/matteli/na-radar">Code source sur GitHub</a>
   </footer>
   {% block script %}{% endblock %}
 </body>
