add take-off and landing in first chart

--- a/na_visualize/templates/dash.html
+++ b/na_visualize/templates/dash.html
@@ -18,7 +18,7 @@
 
       <label id="graphic-label">Graphique
         <select id="graphic-select" name="type-graph">
-          <option value="C" selected>Couvre-feu</option>
+          <option value="CM" selected>Couvre-feu et mouvements</option>
           <option value="H" >Horaires</option>
           <option value="Z">Zones</option>
           <option value="MH">Mouvements et horaires</option>
