--- a/na_visualize/templates/help.html
+++ b/na_visualize/templates/help.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
-<p>Les différents graphiques présentent les conditions de mouvements (décollage, atterrissage) d'avions sur l'aéroport de Nantes-Atlantique pour les dix compagnies les plus représentées :
+<p>Les différents graphiques présentent les conditions de mouvements (décollage, atterrissage) d'avions sur l'aéroport de Nantes-Atlantique pour les dix compagnies aériennes les plus représentées :
   <ul>
     <li>
-      Le graphique "Couvre-feu" indiquent le nombre de mouvements d'avions par compagnie pendant le couvre-feu (de 0h à 6h).
+      Le graphique "Couvre-feu" indiquent le nombre d'avions par compagnie décollant ou atterrissant pendant le couvre-feu (de 0h à 6h).
     </li>
     <li>
       Le graphique "Horaires" indiquent le nombre de mouvements d'avions par compagnie pendant le couvre-feu (de 0h à 6h) ou le reste de la journée.
