--- a/na_visualize/templates/help.html
+++ b/na_visualize/templates/help.html
@@ -15,7 +15,7 @@
       Le graphique "Mouvements et horaires" indiquent le nombre d'avions par compagnie décollant ou atterrissant pendant le couvre-feu (de 0h à 6h) ou le reste de la journée.
     </li>
     <li>
-      Le graphique "Zones et horaires" indiquent le nombre de mouvements d'avions par compagnie utilisant l'aéroport par le sud ou par le nord pendant le couvre-feu (de 0h à 6h) ou le reste de la journée.
+      Le graphique "Zones et horaires" indiquent le nombre de mouvements d'avions par compagnie par le sud ou par le nord pendant le couvre-feu (de 0h à 6h) ou le reste de la journée.
     </li>
     <li>
       Le graphique "Zones et mouvements" indiquent le nombre d'avions par compagnie décollant ou atterrissant par le sud ou par le nord.
