--- a/na_visualize/templates/dash.html
+++ b/na_visualize/templates/dash.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
   <h3>
-    Suivi des mouvements d'avions sur l'aéroport de Nantes-Atlantique.
+    Suivi des mouvements d'avions sur l'aéroport de Nantes-Atlantique
     <a id="help-button" href="/help">&nbsp;?&nbsp;</a>
   </h3>
   <div>
