--- a/na_visualize/templates/help.html
+++ b/na_visualize/templates/help.html
@@ -31,6 +31,9 @@
 <p>
   Le boutton LIVE permet de suivre automatiquement l'évolution du graphique sans avoir besoin de recharger la page.
 </p>
+<p>
+  Les mouvements totaux sont indiqués entre paranthèses à côté des légendes.
+</p>
 <br />
 <br />
 {% endblock %}
