--- a/na_visualize/templates/dash.html
+++ b/na_visualize/templates/dash.html
@@ -18,12 +18,15 @@
 
       <label id="graphic-label">Graphique
         <select id="graphic-select" name="type-graph">
-          <option value="CM" selected>Couvre-feu et mouvements</option>
-          <option value="H" >Horaires</option>
-          <option value="Z">Zones</option>
-          <option value="MH">Mouvements et horaires</option>
-          <option value="ZH">Zones et horaires</option>
-          <option value="MZ">Mouvements et zones</option>
+          <optgroup label="Compagnies aériennes">
+            <option value="CM" selected>Couvre-feu et mouvements</option>
+            <option value="H" >Plages horaires</option>
+            <option value="MH">Mouvements et plages horaires</option>
+          </optgroup>
+          <optgroup label="Heures">
+            <option value="Z">Zones</option>
+            <option value="MZ">Mouvements et zones</option>
+          </optgroup>
         </select>
       </label>
       <button id="submit-button" class="button-enabled" type="button">OK</button>
@@ -42,9 +45,10 @@
     var order = {{ order | safe }};
     var total_amount = {{ total_amount | safe }};
     var title = "{{ title | safe }}";
+    var anchor_legend = "{{ anchor_legend | safe }}";
     var live = false;
     var intervalID;
-    draw_graph(airlines, amounts, colors, order, total_amount, title);
+    draw_graph(airlines, amounts, colors, order, total_amount, title, anchor_legend);
     document.getElementById("submit-button").addEventListener("click", (e) => handleSubmit());
     document.getElementById("live-button").addEventListener("click", (e) => handleLive());
     
@@ -71,7 +75,15 @@
       }
     }
 
-    function draw_graph(airlines, amounts, colors, order, total_amount, title) {
+    function get_anchor_legend(anchor_legend) {
+      if (anchor_legend == "right") {
+        return 1;
+      } else {
+        return 0;
+      }
+    }
+
+    function draw_graph(airlines, amounts, colors, order, total_amount, title, anchor_legend) {
       document.getElementById("title-graph").innerHTML = title;
       var bar = [];
       for (let key in order) {
@@ -88,13 +100,14 @@
           },
         });
       };
+
       var layout = {
         barmode: "stack",
         height: 500,
         margin: { l: 40, r: 40, b: 100, t: 40 },
         legend: {
-          x: 1,
-          xanchor: "right",
+          x: get_anchor_legend(anchor_legend),
+          xanchor: anchor_legend,
           y: 1
         },
       };
@@ -115,7 +128,7 @@
         body: JSON.stringify(data),
       })
         .then(response => response.json())
-        .then(data => draw_graph(data["airlines"], data["amounts"], data["colors"], data["order"], data["total_amount"], data["title"]))
+        .then(data => draw_graph(data["airlines"], data["amounts"], data["colors"], data["order"], data["total_amount"], data["title"], data["anchor_legend"]))
         .catch((error) => {
           console.error("Error:" + error);
         });
