--- a/na_visualize/templates/base.html
+++ b/na_visualize/templates/base.html
@@ -23,7 +23,7 @@
   <meta property="twitter:image" content="https://na-radar.matteli.fr/media/preview.png" />
 
   <link rel="stylesheet" href='/static/style.css' />
-  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" />
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.svg') }}" />
 </head>
 
 <body>
