--- a/na_visualize/templates/base.html
+++ b/na_visualize/templates/base.html
@@ -22,8 +22,11 @@
   <meta property="twitter:description" content="Suivi des mouvements d'avions sur l'aéroport de Nantes-Atlantique" />
   <meta property="twitter:image" content="https://na-radar.matteli.fr/media/preview.png" />
 
+  <!--- favicon --->
   <link rel="stylesheet" href='/static/style.css' />
   <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.svg') }}" />
+  <link rel="mask-icon" href="{{ url_for('static', filename='favicon.svg') }}" color="#000000">
+  <link rel="apple-touch-icon" href="{{ url_for('static', filename='favicon.png') }}">
 </head>
 
 <body>
