--- a/na_visualize/templates/base.html
+++ b/na_visualize/templates/base.html
@@ -27,6 +27,7 @@
   <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.svg') }}" />
   <link rel="mask-icon" href="{{ url_for('static', filename='favicon.svg') }}" color="#000000">
   <link rel="apple-touch-icon" href="{{ url_for('static', filename='favicon.png') }}">
+  <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
 </head>
 
 <body>
