--- a/na_visualize/templates/base.html
+++ b/na_visualize/templates/base.html
@@ -26,7 +26,7 @@
   <link rel="stylesheet" href='/static/style.css' />
   <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.svg') }}" />
   <link rel="mask-icon" href="{{ url_for('static', filename='favicon.svg') }}" color="#000000">
-  <link rel="apple-touch-icon" href="{{ url_for('static', filename='favicon.png') }}">
+  <link rel="apple-touch-icon" href="{{ url_for('static', filename='apple-touch-icon.png') }}">
   <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
 </head>
 
