--- a/na_visualize/templates/help.html
+++ b/na_visualize/templates/help.html
@@ -15,7 +15,7 @@
   Les deux graphiques suivants présentent les conditions de mouvements (décollage, atterrissage) d'avions sur l'aéroport de Nantes-Atlantique par heure.
   <ul>
     <li>
-      Le graphique "Zones" indiquent le nombre de mouvements d'avions par heure par le sud ou par le nord pendant le couvre-feu (de 0h à 6h) ou le reste de la journée.
+      Le graphique "Zones" indiquent le nombre de mouvements d'avions par heure par le sud ou par le nord.
     </li>
     <li>
       Le graphique "Mouvements et zones" indiquent le nombre d'avions par heure décollant ou atterrissant par le sud ou par le nord.
@@ -32,7 +32,7 @@
   Le boutton LIVE permet de suivre automatiquement l'évolution du graphique sans avoir besoin de recharger la page.
 </p>
 <p>
-  Les mouvements totaux sont indiqués entre paranthèses à côté des légendes.
+  Les mouvements totaux sont indiqués entre parenthèses à côté des légendes.
 </p>
 <br />
 <br />
