--- a/na_visualize/templates/help.html
+++ b/na_visualize/templates/help.html
@@ -3,22 +3,22 @@
 <p>Les trois premiers graphiques présentent les conditions de mouvements (décollage, atterrissage) d'avions sur l'aéroport de Nantes-Atlantique pour les dix compagnies aériennes les plus représentées :
   <ul>
     <li>
-      Le graphique "Couvre-feu et mouvements" indiquent le nombre d'avions par compagnie décollant ou atterrissant pendant le couvre-feu (de 0h à 6h).
+      Le graphique "Couvre-feu et mouvements" indique le nombre d'avions par compagnie décollant ou atterrissant pendant le couvre-feu (de 0h à 6h).
     </li>
     <li>
-      Le graphique "Plages horaires" indiquent le nombre de mouvements d'avions par compagnie pendant le couvre-feu (de 0h à 6h) ou le reste de la journée.
+      Le graphique "Plages horaires" indique le nombre de mouvements d'avions par compagnie pendant le couvre-feu (de 0h à 6h) ou le reste de la journée.
     </li>
     <li>
-      Le graphique "Mouvements et plages horaires" indiquent le nombre d'avions par compagnie décollant ou atterrissant pendant le couvre-feu (de 0h à 6h) ou le reste de la journée.
+      Le graphique "Mouvements et plages horaires" indique le nombre d'avions par compagnie décollant ou atterrissant pendant le couvre-feu (de 0h à 6h) ou le reste de la journée.
     </li>
   </ul>
   Les deux graphiques suivants présentent les conditions de mouvements (décollage, atterrissage) d'avions sur l'aéroport de Nantes-Atlantique par heure.
   <ul>
     <li>
-      Le graphique "Zones" indiquent le nombre de mouvements d'avions par heure par le sud ou par le nord.
+      Le graphique "Zones" indique le nombre de mouvements d'avions par heure par le sud ou par le nord.
     </li>
     <li>
-      Le graphique "Mouvements et zones" indiquent le nombre d'avions par heure décollant ou atterrissant par le sud ou par le nord.
+      Le graphique "Mouvements et zones" indique le nombre d'avions par heure décollant ou atterrissant par le sud ou par le nord.
     </li>
   </ul>
 </p>
