add icon title and index in base

--- a/na_visualize/static/style.css
+++ b/na_visualize/static/style.css
@@ -77,6 +77,10 @@ optgroup {
   vertical-align: middle;
 }
 
+#title_icon {
+  vertical-align: bottom;
+}
+
 #title-graph {
   text-align: center;
 }
