--- a/na_visualize/static/style.css
+++ b/na_visualize/static/style.css
@@ -69,15 +69,15 @@ optgroup {
   font-weight: bold;
 }
 
-#github_icon {
+#github-icon {
   vertical-align: middle;
 }
 
-#tipeee_icon {
+#tipeee-icon {
   vertical-align: middle;
 }
 
-#title_icon {
+#title-icon {
   vertical-align: bottom;
 }
 
