--- a/na_visualize/templates/help.html
+++ b/na_visualize/templates/help.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<p>Les trois premiers graphiques présentent les conditions de mouvements (décollage, atterrissage) d'avions sur l'aéroport de Nantes-Atlantique pour les dix compagnies aériennes les plus représentées :
+<p>Les trois premiers graphiques présentent les conditions de mouvements (décollage, atterrissage) des avions sur l'aéroport de Nantes-Atlantique pour les dix compagnies aériennes les plus représentées :
   <ul>
     <li>
       Le graphique "Couvre-feu et mouvements" indique le nombre d'avions par compagnie décollant ou atterrissant pendant le couvre-feu (de 0h à 6h).
@@ -12,7 +12,7 @@
       Le graphique "Mouvements et plages horaires" indique le nombre d'avions par compagnie décollant ou atterrissant pendant le couvre-feu (de 0h à 6h) ou le reste de la journée.
     </li>
   </ul>
-  Les deux graphiques suivants présentent les conditions de mouvements (décollage, atterrissage) d'avions sur l'aéroport de Nantes-Atlantique par heure.
+  Les deux graphiques suivants présentent les conditions de mouvements (décollage, atterrissage) des avions sur l'aéroport de Nantes-Atlantique par heure.
   <ul>
     <li>
       Le graphique "Zones" indique le nombre de mouvements d'avions par heure par le sud ou par le nord.
